ChangeLog

Upcoming version
[TASK]    Switch to PHP based rendering for documentation. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/265

Version 6.1.3, 20 December 2024
[FEATURE] Show additional fields which are registered by other extensions in "Indexed content" function of the backend module
[BUGFIX]  Make it possible to have multiple "orderBy" parts in the search result query in TYPO3 13
[TASK]    Add special treatment for the ke_search_premium "Custom Ranking" feature in the search result query "orderBy" part
[TASK]    Make it possible to add "having" in the search result query
[TASK]    Make sure TSFE is set before accessing

Version 6.1.2, 15 November 2024
[BUGFIX]  Fix regression which required a startingpoint to be always set. https://github.com/tpwd/ke_search/issues/257
[TASK]    Update non-oo zip library calls in OoxmlConversion to ZipArchive ones. Thanks to Defcon0. https://github.com/tpwd/ke_search/pull/255

Version 6.1.1, 8 November 2024
[BUGFIX]  Fix regression in composer.json which removes TYPO3 13 requirement

Version 6.1.0, 8 November 2024
[FEATURE] Make it possible to index multiple additional tables for a content element. https://github.com/tpwd/ke_search/issues/230
[FEATURE] Allow recursive indexing of additional content
[BUGFIX]  parse_ini_string(): Passing null to parameter #1 ($ini_string) of type string is deprecated. Thanks to medarob. https://github.com/tpwd/ke_search/issues/247
[TASK]    Remove obsolete returnFieldJs() function, https://github.com/tpwd/ke_search/issues/231

Version 6.0.1, 25 October 2024
[BUGFIX]  Add missing storage page and recursive option. Thanks to Torben Hansen. https://github.com/tpwd/ke_search/issues/251
[BUGFIX]  Undefined array key "sortByAdmin". Thanks to Simon Praetorius. https://github.com/tpwd/ke_search/issues/252

Version 6.0.0, 18 October 2024
[!!!]     This version drops support for TYPO3 11.