@@ -15,7 +15,6 @@
                         </label>
                         <config>
                             <type>group</type>
-                            <internal_type>db</internal_type>
                             <allowed>tt_content</allowed>
                             <size>1</size>
                             <maxitems>1</maxitems>
